<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/images">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4A8BC34A"
        android:onClick="doClick"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="328dp"
            android:layout_height="85dp"
            android:layout_marginTop="15dp"
            android:background="#009688"
            android:gravity="center"
            android:onClick="doClick"
            android:text="welcome to Tic Tactoe Game "
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#E91E63"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="215dp"
            android:layout_height="33dp"
            android:gravity="center_horizontal"
            android:onClick="doClick"
            android:text="@string/now_player_x_s_turn"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView"
            app:layout_constraintVertical_bias="0.557" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:divider="@drawable/tttbackground"
            android:onClick="doClick"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="0"
                    android:text="$"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="1"
                    android:text="@string/tv1"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="2"
                    android:text="@string/tv2"
                    android:textSize="75sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="3"
                    android:text="@string/tv3"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="4"
                    android:text="@string/tv4"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="5"
                    android:text="@string/tv5"
                    android:textSize="75sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="6"
                    android:text="@string/tv6"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="7"
                    android:text="@string/tv7"
                    android:textSize="75sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFEB3B"
                    android:gravity="center_horizontal"
                    android:onClick="playerTap"
                    android:padding="10dp"
                    android:tag="8"
                    android:text="@string/tv8"
                    android:textSize="75sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="191dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:background="#E91E63"
            android:onClick="resetBoard"

            android:text="@string/reset_game"
            android:textColor="#CDE7F3"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>